k8s/circle-auth.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circle-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: circle-auth
  template:
    metadata:
      labels:
        app: circle-auth
    spec:
      containers:
        - name: circle-auth
          image: kohee/circle-auth:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: circle-auth
  annotations:
    dev.okteto.com/auto-ingress: "false"
spec:
  selector:
    app: circle-auth
  type: NodePort
  ports:
    - port: 80
