k8s/circle-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: circle-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: circle-web
  template:
    metadata:
      labels:
        app: circle-web
    spec:
      containers:
        - name: circle-web
          image: kohee/circle-web:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: circle-web
  annotations:
    dev.okteto.com/auto-ingress: "private"
spec:
  selector:
    app: circle-web
  type: NodePort
  ports:
    - port: 80
      targetPort: 3000
