k8s/okteto.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: nginx
  annotations:
    dev.okteto.com/auto-ingress: "true"
spec:
  selector:
    app: nginx
  type: LoadBalancer
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 80
